# netbox-snapshot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  TODO.md  TODO_REVIEW.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
__doc/code_reviews/: 20260615-1437_import_code_post_lp_review.md  20260618-1315_ci_lint_remediation.md
__doc/investigations/: feat42_plan_order.md
docs/: INDEX.md  operator-performance.md  operator-runbook.md  security-review.md
docs/audits/: arch-02-resolver-inventory.md
docs/frictions/: 10-api-scaling-and-rate-limits.md
docs/implementation/: 00-INDEX.md  01-http-client.md  02-runtime.md  03-snapshot-storage.md  04-graph-library.md  06-graphql-adoption.md  07-bulk-endpoint-adoption.md  08-renderer-parity-dataset.md
scripts/: generate_scale_fixture.py  raw_api_dump.py  setup-dev.sh
src/nbsnap/: __init__.py  __main__.py  cli.py  config.py  export_cli.py  import_cli.py  log.py  pack.py  plan_cli.py  progress_ui.py  reset_cli.py  summary.py
src/nbsnap/cli/: __init__.py  common.py
src/nbsnap/export/: __init__.py  driver.py  extractor.py  fk_rewrite.py  install_local.py  manifest.py  progress.py  writer.py
src/nbsnap/graph/: __init__.py  algo.py  build.py  model.py  polymorphic.py
src/nbsnap/http/: __init__.py  client.py  exceptions.py  guard.py
src/nbsnap/import_/: __init__.py  audit.py  body_preparer.py  driver.py  field_resolver.py  fk_resolve.py  lookahead.py  nk_index.py  phase1_runner.py  phase2.py  phase2_runner.py  preflight.py  progress.py  resolve_context.py  snapshot_index.py  upsert.py
src/nbsnap/natkey/: __init__.py  model.py  registry.py  resolver.py  verify.py
src/nbsnap/plugins/: __init__.py  api.py  sample_bgp.py
src/nbsnap/schema/: __init__.py  content_type.py  content_types.py  diff.py  openapi.py  status.py
src/nbsnap/snapshot/: __init__.py  coerce.py  layout.py  manifest.py
src/nbsnap/verify/: __init__.py  diff.py  roundtrip.py
tests/_nb2kea/scripts/: netbox2cisco.py  netbox2junos.py  netbox2kea.py  netbox_verify_renderable.py
tests/_nb2kea/scripts/netbox_utils/: netbox_assign_access_ips.py  netbox_assign_dist_ips.py  netbox_audit.py  netbox_audit_dist_data.py  netbox_audit_kea.py  netbox_common.py  netbox_create_access_switches.py  netbox_create_cables.py  netbox_create_dist_virtual_ifaces.py  netbox_fill_dist_port_vlans.py  netbox_fill_district_token.py  netbox_fill_kea_data.py  netbox_fill_kea_dist_pools.py  netbox_fill_participant_ipv6_prefixes.py  netbox_fill_participant_vlan_names.py  netbox_fill_switch_count.py  netbox_split_esport_city.py  netbox_verify_dist_helpers.py
tests/_nb2kea/scripts/templates/: access.conf.j2  dist.set.j2
tests/fixtures/: README.md  seed.py
tests/fixtures/dest/: docker-compose.yml
tests/fixtures/dest/env/: netbox.env
tests/fixtures/plugins/: sample_marker.py
tests/fixtures/renderer-parity/: README.md
tests/fixtures/seed/: 00-roles.json  01-sites.json  02-locations.json  03-manufacturers.json  04-device-types.json  05-devices.json  06-interfaces.json  07-vlans.json  08-prefixes.json  09-ip-ranges.json  10-ip-addresses.json  11-cables.json  12-device-primary-ips.json  13-renderer-data.json  14-renderer-vlans-irbs.json  15-renderer-loopback.json  16-kea-prefixes.json
tests/fixtures/source/: docker-compose.yml
tests/fixtures/source/env/: netbox.env
tests/integration/: conftest.py  test_audit_redaction.py  test_content_type_drift.py  test_embedded_use.py  test_export_reproducibility.py  test_import_cycles.py  test_import_demand_driven.py  test_import_idempotency.py  test_import_redirect_safety.py  test_import_unknown_ct_message.py  test_plugin_load_e2e.py  test_renderer_minimum_coverage.py  test_renderer_parity_roundtrip.py  test_renderer_parity_source.py  test_reset_destination.py  test_scale.py  test_schema_timing.py  test_source_readonly_e2e.py
tests/unit/: test_audit_skipped_rows.py  test_body_preparer.py  test_cli.py  test_cli_plugins_flag.py  test_config.py  test_content_type_cache.py  test_content_type_diff.py  test_export_enum_collapse.py  test_export_extractor.py  test_export_manifest_and_progress.py  test_export_writer.py  test_graph_algo.py  test_graph_build.py  test_graph_model.py  test_graph_no_unnecessary_defer.py  test_graph_polymorphic_content_type.py  test_graph_polymorphic_hints.py  test_guard_helper.py  test_http_boundary.py  test_http_client_auth.py  test_http_client_is_source.py  test_http_client_pagination.py  test_http_client_pagination_shrink.py  test_http_client_redirect.py  test_http_client_retry.py  test_http_client_tls.py  test_http_client_transport.py  test_import_audit_split.py  test_import_cable_terminations.py  test_import_cli_bypass_out.py  test_import_cli_bypass_summary.py  test_import_cli_errors.py  test_import_cli_exit_codes.py  test_import_custom_fields_filter.py  test_import_deferred_fields_strip.py  test_import_driver_lookahead.py  test_import_driver_phase2.py  test_import_drop_nones_on_post.py  test_import_drop_warning_suppression.py  test_import_fk_resolve.py  (+50 more)
tests/unit/cli/: test_common_flags.py  test_export_cli_flags.py  test_help_parity.py  test_import_cli_flags.py  test_reset_plan_cli_flags.py  test_scope_alias_deprecation.py
tests/unit/export/: test_public_api.py
tests/unit/http/: test_exceptions.py  test_netbox_http_error_redaction.py  test_redact_body.py
tests/unit/import_/: test_field_resolver.py  test_fk_resolve_errors.py  test_phase1_runner.py  test_phase2_runner.py  test_preflight_unknown_ct.py  test_public_api.py  test_resolver_error_to_audit.py
tests/unit/natkey/: test_registry_content_type.py  test_registry_with_plugins.py  test_resolver_errors.py
tests/unit/plugins/: test_sample_bgp.py
tests/unit/schema/: test_content_type.py  test_content_type_typos.py
tests/unit/snapshot/: test_coerce.py  test_layout.py  test_layout_unknown.py  test_manifest.py  test_package_imports.py
