# Build manifest for nbsnap.
#
# Python 3.11 floor reasons:
#   * tomllib in the standard library (no third-party TOML parsing
#     dep needed when we eventually read snapshot manifests).
#   * PEP 695 type aliases for cleaner public schema annotations.
#   * Exception groups for the planned multi-error import roll-up.
#
# Runtime dependencies stay empty here on purpose. RES-01 picks the
# HTTP client and lands it in [project].dependencies in that ticket.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbsnap"
version = "0.0.1"
description = "Portable, API-only snapshot tool for moving the NetBox network model between isolated NetBox installations."
requires-python = ">=3.11"
license = "BSD-3-Clause"
# The `readme` field is added by INFRA-01c once README.md exists.
# Hatchling refuses to build if `readme` points at a missing file.
authors = [{name = "Louie", email = "louie@louie.se"}]
maintainers = [{name = "Louie", email = "louie@louie.se"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
# Runtime dependencies. requests is locked in by
# docs/implementation/01-http-client.md (RES-01). The lower bound
# pulls in the urllib3 v2 series so the retry adapter has the modern API.
dependencies = [
    "requests>=2.31,<3",
    "zstandard>=0.22",
]

[project.scripts]
nbsnap = "nbsnap.cli:main"

# Plugin extension entry point. Reserved for FEAT-31, the public
# plugin discovery API. Left intentionally empty until that ticket
# lands so existing entry-point scans see a valid (empty) group.
[project.entry-points."nbsnap.plugin"]

[tool.hatch.build.targets.wheel]
packages = ["src/nbsnap"]

# Optional dependency group for contributors. Installed via:
#     pip install -e ".[dev]"
# CI re-uses the same group so the local and remote toolchains stay
# in lockstep.
[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    # A renderer or import test that hangs on a retry loop or
    # interactive prompt must not be allowed to stall the whole
    # 30 minute integration job. pytest-timeout caps every test
    # at the value declared in `tool.pytest.ini_options.timeout`.
    "pytest-timeout>=2.3",
    "pre-commit>=3.7",
    "responses>=0.25",
    "types-requests>=2.31",
    # `tests/_nb2kea/` carries the upstream nb2kea renderers
    # which load Jinja2 templates at runtime. Pinned to the dev
    # extra so CI can run the renderer-parity integration tests
    # without installing the dependency by hand.
    "jinja2>=3.1",
]

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------
# Style baseline. 100 columns leaves room for the deeply nested call
# chains a NetBox traversal naturally produces without forcing too
# many line breaks that hurt readability.

[tool.ruff]
line-length = 100
target-version = "py311"
# __reference/ holds the read-only nb2kea prior-art project. Linting
# someone else's code is noise, exclude the whole subtree. .venv is
# the dev sandbox; tmp/ holds rescue artefacts and one-off scripts.
exclude = ["__reference", ".venv", "venv", "tmp", "tests/_nb2kea", "tests/external"]

[tool.ruff.lint]
# Curated rule set:
#   E, F, W   pycodestyle + pyflakes baseline
#   I         import sorting (replaces isort)
#   B         bugbear, catches mutable-default-arg and similar traps
#   UP        pyupgrade, keeps syntax current with the 3.11 floor
#   ARG       unused-arguments, useful in a class-heavy code base
#   SIM       simplify, suggests cleaner control-flow rewrites
select = ["E", "F", "W", "I", "B", "UP", "ARG", "SIM"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy configuration
# ---------------------------------------------------------------------------
# Strict typing inside src/nbsnap is non-negotiable; the dependency
# graph between modules is large enough that a missed Optional will
# bite at runtime. Tests are allowed to be looser because pytest
# fixtures often have no meaningful return type.

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
files = ["src/nbsnap"]

[[tool.mypy.overrides]]
module = "tests.*"
# Allow tests to omit return annotations and use untyped fixtures.
disallow_untyped_defs = false
check_untyped_defs = false

# Third-party deps without typed releases on PyPI. requests ships a
# py.typed marker but its public surface still resolves to Any under
# strict mode; treat the boundary as untyped here and cast at the
# call sites.
[[tool.mypy.overrides]]
module = ["zstandard", "zstandard.*", "requests", "requests.*", "urllib3", "urllib3.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
# `pythonpath = ["src"]` lets tests import `nbsnap` without requiring
# an editable install on every dev box. CI still runs the install
# step so the published wheel layout is exercised somewhere.
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
testpaths = ["tests"]
xfail_strict = true
# Cap any single test at 120 seconds. The integration tests that
# subprocess into the nb2kea renderers, the bulk import path, or
# the reset_destination sweep can run slow on a cold CI runner,
# but none of them should legitimately exceed two minutes against
# our minimal seed fixture. Without a cap, a single hang stalls
# the whole 30 minute integration job.
timeout = 120
timeout_method = "thread"


